syntax = "proto3";

package obs_remote.events.v1;

service EventsService {
  rpc All(AllRequest) returns (stream AllResponse);
  rpc General(GeneralRequest) returns (stream GeneralResponse);
  rpc Config(ConfigRequest) returns (stream ConfigResponse);
  rpc Scenes(ScenesRequest) returns (stream ScenesResponse);
  rpc Inputs(InputsRequest) returns (stream InputsResponse);
  rpc Transitions(TransitionsRequest) returns (stream TransitionsResponse);
  rpc Filters(FiltersRequest) returns (stream FiltersResponse);
  rpc Outputs(OutputsRequest) returns (stream OutputsResponse);
  rpc SceneItems(SceneItemsRequest) returns (stream SceneItemsResponse);
  rpc MediaInputs(MediaInputsRequest) returns (stream MediaInputsResponse);
  rpc HighVolume(HighVolumeRequest) returns (stream HighVolumeResponse);
}

message AllRequest {}

message AllResponse {
  Event event = 1;
}

message GeneralRequest {}

message GeneralResponse {
  GeneralEvent event = 1;
}

message ConfigRequest {}

message ConfigResponse {
  ConfigEvent event = 1;
}

message ScenesRequest {}

message ScenesResponse {
  ScenesEvent event = 1;
}

message InputsRequest {}

message InputsResponse {
  InputsEvent event = 1;
}

message TransitionsRequest {}

message TransitionsResponse {
  TransitionsEvent event = 1;
}

message FiltersRequest {}

message FiltersResponse {
  FiltersEvent event = 1;
}

message OutputsRequest {}

message OutputsResponse {
  OutputsEvent event = 1;
}

message SceneItemsRequest {}

message SceneItemsResponse {
  SceneItemsEvent event = 1;
}

message MediaInputsRequest {}

message MediaInputsResponse {
  MediaInputsEvent event = 1;
}

message HighVolumeRequest {}

message HighVolumeResponse {
  HighVolumeEvent event = 1;
}

message Event {
  oneof value {
    GeneralEvent general = 1;
    ConfigEvent config = 2;
    ScenesEvent scenes = 3;
    InputsEvent inputs = 4;
    TransitionsEvent transitions = 5;
    FiltersEvent filters = 6;
    OutputsEvent outputs = 7;
    SceneItemsEvent scene_items = 8;
    MediaInputsEvent media_inputs = 9;
    HighVolumeEvent high_volume = 10;
  }
}

message GeneralEvent {
  oneof value {
    ExitStarted exit_started = 1;
    StudioModeStateChanged studio_mode_state_changed = 2;
    Custom custom = 3;
  }

  message ExitStarted {}

  message StudioModeStateChanged {
    bool enabled = 1;
  }

  message Custom {}
}

message ConfigEvent {
  oneof value {
    CurrentSceneCollectionChanged current_scene_collection_changed = 1;
    SceneCollectionListChanged scene_collection_list_changed = 2;
    CurrentProfileChanged current_profile_changed = 3;
    ProfileListChanged profile_list_changed = 4;
  }

  message CurrentSceneCollectionChanged {
    string name = 1;
  }

  message SceneCollectionListChanged {
    repeated string collections = 1;
  }

  message CurrentProfileChanged {
    string name = 1;
  }

  message ProfileListChanged {
    repeated string profiles = 1;
  }
}

message ScenesEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    CurrentChanged current_changed = 4;
    CurrentPreviewChanged current_preview_changed = 5;
    ListReindexed list_reindexed = 6;
  }

  // Original: SceneCreated
  message Created {
    string name = 1;
    bool group = 2;
  }

  // Original: SceneRemoved
  message Removed {
    string name = 1;
    bool group = 2;
  }

  // Original: SceneNameChanged
  message NameChanged {
    string old_name = 1;
    string name = 2;
  }

  // Original: CurrentSceneChanged
  message CurrentChanged {
    string name = 1;
  }

  // Original CurrentPreviewSceneChanged
  message CurrentPreviewChanged {
    string name = 1;
  }
  // Original: SceneListReindexed
  message ListReindexed {
    repeated Scene scenes = 1;

    message Scene {
      string name = 1;
      int32 index = 2;
      bool group = 3;
    }
  }
}

message InputsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    ActiveStateChanged active_state_changed = 4;
    ShowStateChanged show_state_changed = 5;
    MuteStateChanged mute_state_changed = 6;
    VolumeChanged volume_changed = 7;
    AudioSyncOffsetChanged audio_sync_offset_changed = 8;
    AudioTracksChanged audio_tracks_changed = 9;
  }

  // Original: InputCreated
  message Created {
    string name = 1;
    string kind = 2;
    string unversioned_kind = 3;
    string settings = 4;
    string default_settings = 5;
  }

  // Original: InputRemoved
  message Removed {
    string name = 1;
  }

  // Original: InputNameChanged
  message NameChanged {
    string old_name = 1;
    string name = 2;
  }

  // Original: InputActiveStateChanged
  message ActiveStateChanged {
    string name = 1;
    bool active = 2;
  }

  // Original: InputShowStateChanged
  message ShowStateChanged {
    string name = 1;
    bool visible = 2;
  }

  // Original: InputMuteStateChanged
  message MuteStateChanged {
    string name = 1;
    bool muted = 2;
  }

  // Original: InputVolumeChanged
  message VolumeChanged {
    string name = 1;
    double volume_mul = 2;
    double volume_db = 3;
  }

  // Original: InputAudioSyncOffsetChanged
  message AudioSyncOffsetChanged {
    string name = 1;
    int64 offset = 2;
  }

  // Original: InputAudioTracksChanged
  message AudioTracksChanged {
    string name = 1;
    bool track_1 = 2;
    bool track_2 = 3;
    bool track_3 = 4;
    bool track_4 = 5;
    bool track_5 = 6;
    bool track_6 = 7;
  }
}

message TransitionsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    CurrentChanged current_changed = 4;
    CurrentDurationChanged current_duration_changed = 5;
    Started started = 6;
    Ended ended = 7;
  }

  // Original: TransitionCreated
  message Created {
    string name = 1;
    string kind = 2;
    bool fixed = 3;
  }

  // Original: TransitionRemoved
  message Removed {
    string name = 1;
  }

  // Original: TransitionNameChanged
  message NameChanged {
    string old_name = 1;
    string name = 2;
  }

  // Original: CurrentTransitionChanged
  message CurrentChanged {}

  // Original: CurrentTransitionDurationChanged
  message CurrentDurationChanged {}

  // Original: TransitionStarted
  message Started {}

  // Original: TransitionEnded
  message Ended {}
}

message FiltersEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    AddedToSource added_to_source = 4;
    RemovedFromSource removed_from_source = 5;
    SourceListReindexed source_list_reindexed = 6;
  }

  // Original: FilterCreated
  message Created {}

  // Original: FilterRemoved
  message Removed {}

  // Original: FilterNameChanged
  message NameChanged {}

  // Original: SourceFilterAdded
  message AddedToSource {}

  // Orignal: SourceFilterRemoved
  message RemovedFromSource {}

  // Original: SourceListReindexed
  message SourceListReindexed {}
}

message OutputsEvent {
  oneof value {
    StreamStateChanged stream_state_changed = 1;
    RecordStateChanged record_state_changed = 2;
    ReplayBufferStateChanged replay_buffer_state_changed = 3;
    VirtualCamStateChanged virtual_cam_state_changed = 4;
    ReplayBufferSaved replay_buffer_saved = 5;
  }

  message StreamStateChanged {
    bool active = 1;
    State state = 2;
  }

  message RecordStateChanged {
    bool active = 1;
    State state = 2;
  }

  message ReplayBufferStateChanged {
    bool active = 1;
    State state = 2;
  }

  message VirtualCamStateChanged {
    bool active = 1;
    State state = 2;
  }

  message ReplayBufferSaved {
    string path = 1;
  }

  enum State {
    STATE_UNSPECIFIED = 0;
    STATE_STARTING = 1;
    STATE_STARTED = 2;
    STATE_STOPPING = 3;
    STATE_STOPPED = 4;
    STATE_PAUSED = 5;
    STATE_RESUMED = 6;
  }
}

message SceneItemsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    ListReindexed list_reindexed = 3;
    EnableStateChanged enable_state_changed = 4;
    LockStateChanged lock_state_changed = 5;
    TransformChanged transform_changed = 6;
  }

  // Original: SceneItemCreated
  message Created {
    string scene = 1;
    string input = 2;
    int64 id = 3;
    int32 index = 4;
  }

  // Original: SceneItemRemoved
  message Removed {
    string scene = 1;
    string input = 2;
    int64 id = 3;
    int32 index = 4;
  }

  // Original: SceneItemListReindexed
  message ListReindexed {
    string scene = 1;
    repeated SceneItem items = 2;

    message SceneItem {
      int64 id = 3;
      int32 index = 4;
    }
  }

  // Original: SceneItemEnableStateChanged
  message EnableStateChanged {
    string scene = 1;
    int64 id = 2;
    bool enabled = 3;
  }

  // Original: SceneItemLockStateChanged
  message LockStateChanged {
    string scene = 1;
    int64 id = 2;
    bool locked = 3;
  }

  // Original: SceneItemTransformChanged
  message TransformChanged {}
}

message MediaInputsEvent {
  oneof value {
    PlaybackStarted playback_started = 1;
    PlaybackEnded playback_ended = 2;
    ActionTriggered action_triggered = 3;
  }

  // Original: MediaInputPlaybackStarted
  message PlaybackStarted {
    string name = 1;
  }

  // Original: MediaInputPlaybackEnded
  message PlaybackEnded {
    string name = 1;
  }

  // Original: MediaInputActionTriggered
  message ActionTriggered {
    string name = 1;
    Action action = 2;

    enum Action {
      ACTION_UNSPECIFIED = 0;
      ACTION_PAUSE = 1;
      ACTION_PLAY = 2;
      ACTION_RESTART = 3;
      ACTION_STOP = 4;
      ACTION_NEXT = 5;
      ACTION_PREVIOUS = 6;
    }
  }
}

message HighVolumeEvent {
  oneof value {
    InputVolumeMeters input_volume_meters = 1;
  }

  message InputVolumeMeters {}
}
